# shivarthu-app

./: Cargo.toml  README.md  index.html
accounts/: account.txt
artifacts/: metadata.scale
css/: output.css
src/: app.rs  main.rs  router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/signing/: create_account.rs
src/components/: mod.rs
src/components/api/: ipfs_request.rs  mod.rs  select_ipfs_provider.rs
src/components/common/: global_state.rs  mod.rs
src/components/common_transaction/: balance_tranfer_sign_in.rs  balance_transfer.rs  mod.rs
src/components/markdown/: markdown_field.rs
src/components/navigation/: account_nav.rs  balance.rs  mod.rs  nav.rs
src/components/schelling_game/: mod.rs
src/components/schelling_game/department_funding/: apply_jurors.rs  apply_jurors_sign_in.rs  apply_staking_period.rs  apply_staking_period_params.rs  apply_staking_period_sign_in.rs  challenge_evidence.rs  challenge_evidence_sign_in.rs  change_period.rs  change_period_sign_in.rs  commit_vote.rs  commit_vote_sign_in.rs  create_department_fund.rs  create_department_fund_sign_in.rs  (+10 more)
src/components/shared_storage/: address_submission.rs  address_submission_sign_in.rs  mod.rs
src/components/signing/: accounts_store.rs  add_account.rs  create_account.rs  delete_account.rs  enter_pass_with_nav.rs  mod.rs  set_phrase_from_pass.rs  sign_in_form.rs  sign_out.rs  sign_transaction.rs  sign_transaction_fn.rs
src/constants/: auth.rs  mod.rs
src/pages/: features.rs  milestone.rs  mod.rs
src/services/: common_services.rs
(+121 files in other folders)
