[package]
name = "shivarthu-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.8.2", features = ["nightly"] }
reactive_stores = "0.2.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos-use = "0.16.1"
leptos_icons = "0.6.1"
codee = "0.3.0"
icondata = "0.6.0"
web-sys = "0.3"
pulldown-cmark = "0.13.0"
select = "0.6.0"
serde_json = "1"
gloo = "0.11.0"
jsonrpsee-wasm-client = "0.24"
jsonrpsee-core = "0.24"
subxt = { version = "0.42.1", default-features = false, features = [
    "jsonrpsee",
    "web",
] }
subxt-core = "0.42.1"
subxt-signer = "0.42.1"
magic-crypt = "4.0.1"
sp-core-hashing = "16.0.0"
thiserror = "2.0.12"
json = "0.12.4"

[workspace]
members = ["src-tauri"]
